--- a/main.css
+++ b/main.css
@@ -1,7 +1,11 @@
 html,
 body {
   height: 100%;
-  background-color: #5CDB95;
+  background-color: #5cdb95;
+}
+
+.container main {
+  margin-top: -200px;
 }
 
 .container {
@@ -11,13 +15,36 @@ body {
   align-items: center;
 }
 
-.container h1{
-    color: #EDF5E1;
-    font-size: 10vw;
+.container h1 {
+  color: #edf5e1;
+  font-size: 10vw;
+  margin-bottom: 0;
 }
 
 .container p {
-    color: #05386B;
-    font-size: 2vw;
+  color: #05386b;
+  font-size: 2vw;
+ 
+}
 
+button,
+.form-control,
+::placeholder {
+  background-color: #edf5e1 !important;
+  color: #05386b !important;
+  transition: 0.3s;
+}
+ 
+span button {
+  width:100%;
+  padding-left: 5px;
+}
+
+input {
+  margin-right: 10px !important;
+}
+
+button:hover{
+  background-color: white !important;
+  
 }
